
	Changes With Important Notices
		Updated PHPMailer to v5.2.16, and switched to SMTP mailing (check that your server supports un-authenticated local SMTP relay, or set up SMTP in Third Party Settings)
		Updated TinyMCE library to latest release (might require users to clear browser cache to load WYSIWYG)

	Significant Changes
		System: Changed Primary Assessment Scale to Default Assessment Scale
		Markbook: added ability to copy columns to other classes

	Security
		...

	Tweaks & Bug Fixes
		System: fixed sql loading issue in trans class
		System: enabled Smart Workflow Help for newly added staff
		System: turned on Smart Workflow help for admin user created during install
		System: added Bulgarian Lev and Namibian Dollar as currency
		System: added Bulgarian, Korean and Finnish as development languages
		System: removed image button from TinyMCE
		System: fixed out of place > in Chrome in certain breadcrumbs
		System: directed Google OAuth to give offline access, ensure presence of refreshToken
		System: updated .gitignore to include .DS_store files
		System: updated PayPal integration to set localecode based on current Gibbon language
		System: updated the reincarnate image on Default theme
		System: removed robots meta tag
		Activities: added information to parent dashboard
		Activities: efficiency improvements in displaying time slots
		Activities: fixed bug which cut one student off print view of attendance print out
		Departments: added course long name to header of Class page
		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
		Departments: included participants in Class page, rather than as a subpage.
		Markbook: added settings to enable/disable Effort and Rubrics
		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
		Markbook: removed Learning Area rubrics from multiple column add